# msc-code

./: .gitignore  run.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  refactor.yml
_archive/code/test_001/: build.sh  run_test.py
_archive/code/test_002/: build.sh  output.csv  run_test.py
_archive/code/test_004/: 1.csv  2.csv  output.csv  output.ods.csv  run_test.py
_archive/quick_test/: build.sh  openmp.cpp  sycl.cpp
_archive/test_code/: build.sh  saxpy_omp.cpp
basic/: build_data_race.sh  build_data_race_sum.sh  build_serial.sh  data_race.cpp  data_race_sum.cpp  data_race_sum_atomic.cpp  data_race_sum_reduction.cpp  serial.cpp
coding_standards/: cpp23_coding_standard_v3.md  cpp23_coding_standard_v4.md  prompt_for_coding_standards.txt
coding_standards/old/: coding_standards_prompt.txt  coding_standards_prompt_2.txt  cpp23_coding_standard_v1.md  cpp23_coding_standard_v2.md  prompt_for_v3.md
docker_file/: Dockerfile  build_docker.sh
docker_tests/: build.sh  example_sycl.cpp
evaluation_codes/heat/: heat.code-workspace
evaluation_codes/simplemd/: README.md  run_docker.sh
evaluation_codes/simplemd/openmp/src/: CMakeLists.txt
evaluation_codes/simplemd/openmp/src/lib/Helper/: Error.hpp
evaluation_codes/simplemd/openmp/src/lib/Maths/: Vec3.hpp
evaluation_codes/simplemd/openmp/src/lib/SimpleMD/: Atom.hpp  Configuration.hpp  ConfigurationEngine.hpp  GhostAtom.hpp  Morse.hpp  Run.hpp  Timer.hpp  VerletEngine.hpp  _simplemd.hpp
evaluation_codes/simplemd/serial/: CMakeLists.txt  build.sh  input.json
evaluation_codes/simplemd/serial/docs/: build.sh
evaluation_codes/simplemd/serial/docs/source/: index.rst
evaluation_codes/simplemd/serial/src/: CMakeLists.txt  main.cpp
evaluation_codes/simplemd/serial/src/lib/: CMakeLists.txt
evaluation_codes/simplemd/serial/src/lib/Helper/: Macros.hpp
evaluation_codes/simplemd/serial/src/lib/Maths/: _maths.hpp
evaluation_codes/simplemd/serial/src/lib/SimpleMD/: Atom.hpp  Bcc.hpp  Configuration.hpp  ConfigurationEngine.hpp  Fcc.hpp  Run.hpp  VerletEngine.hpp
evaluation_codes/simplemd/serial/src1/: CMakeLists.txt
evaluation_codes/simplemd/serial/src1/lib/: CMakeLists.txt
evaluation_codes/simplemd/serial/src1/lib/Helper/: CMakeLists.txt  Error.hpp  Error.ixx  Error1.hpp  StandardClasses.hpp
evaluation_codes/simplemd/serial/src1/lib/Maths/: Vec3.hpp
evaluation_codes/simplemd/serial/src_tests/: CMakeLists.txt
evaluation_codes/simplemd/serial/src_tests/Maths/Vec3/: Vec3Addition.cpp  Vec3Distance.cpp  Vec3Max.cpp  Vec3Min.cpp  Vec3MinusEquals.cpp  Vec3Subtraction.cpp  Vec3Zero.cpp
evaluation_codes/simplemd/sycl/: CMakeLists.txt  acpp.toolchain.cmake  build.sh  input.json  run.sh
evaluation_codes/simplemd/sycl/src/: CMakeLists.txt
evaluation_codes/simplemd/sycl/src/lib/Helper/: _helper.hpp
evaluation_codes/simplemd/sycl/src/lib/SimpleMD/: Atom.hpp  AtomPair.hpp  Configuration.hpp  ConfigurationEngine.hpp  Morse.hpp  Run.hpp  VerletEngine.hpp
evaluation_codes/simplemd/sycl/src_tests/Maths/Vec3/: Vec3Cross.cpp  Vec3Divide.cpp  Vec3IndexConst.cpp  Vec3Length.cpp  Vec3LengthSquared.cpp  Vec3Matrix.cpp  Vec3Multiplication1.cpp  Vec3Multiplication2.cpp  Vec3PlusEquals.cpp
heat/cuda/: CudaEngine.hpp  Heat.hpp  build.sh  input.json  plot.py  run.sh
heat/openmp/: Heat.hpp  Writer.hpp
heat/sycl/: Writer.hpp  animate.sh
trials/: gpu_usage.sh  run.sh
trials/.old/: serial.cpp
trials/helper_programs/: list_devices.cpp
trials/trial_001_basic_operations/: basic_operations.code-workspace  benchmark_results_cpu.json  benchmark_results_gpu.json  build_cpu.sh  build_gpu.sh  openmp.cpp  openmp_simd.cpp  plot.py  plot_old.py  results.json  run_cpu.sh  run_gpu.sh  serial.cpp  serial_simd.cpp  serial_stl.cpp  sycl.cpp  trial_001_adding_sycl_tree.cpp
trials/trial_001_basic_operations_32bit/: analyze.py  benchmark_results_gpu.json  build_cpu.sh  build_gpu.sh  run_cpu.sh  run_gpu.sh
trials/trial_002_sum_vector/: build_cpu.sh  build_gpu.sh  cuda.cu  openmp.cpp  openmp_simd.cpp  openmp_tree.cpp  run_cpu.sh  run_gpu.sh  serial_naive.cpp  serial_simd.cpp  serial_stl_accumulate.cpp  serial_stl_reduce.cpp  sycl.cpp  sycl_reduction.cpp
trials/trial_003_dgemm/: build_cpu.sh  build_gpu.sh  cuda.cu  openmp.cpp  run_cpu.sh  run_gpu.sh  serial.cpp  sycl.cpp
trials/trial_004_stopping_power/: build_cpu.sh  build_gpu.sh  openmp.cpp  run_cpu.sh  serial.cpp  sycl.cpp  sycl2.cpp  trial_003_stopping_power_sycl_1.cpp  trial_003_stopping_power_sycl_2.cpp
trials/trial_004_stopping_power_32bit/: build_cpu.sh  build_gpu.sh  openmp.cpp  run_gpu.sh  serial.cpp  sycl.cpp
trials_old/del/: sycl_reduction_usm.cpp  trial_001_adding_opencl_1.cpp  trial_001_adding_opencl_2.cpp
trials_old/old/: parse.py  trial_001_adding_sycl.cpp  trial_001_adding_sycl_1.cpp
trials_old/random_testing/: sycl_reduction.cpp  sycl_reduction.sh
trials_old/trial_001_adding/: build.sh  trial_001_adding_cuda.cu  trial_001_adding_openmp.cpp  trial_001_adding_serial.cpp  trial_001_adding_sycl_2.cpp
trials_old/trial_002_matrix_multiplication/: build.sh  trial_002_matrix_multiplication.code-workspace  trial_002_matrix_multiplication_openmp.cpp  trial_002_matrix_multiplication_serial.cpp  trial_002_matrix_multiplication_sycl.cpp
trials_old/trial_003_stopping_power/: build.sh  trial_003_stopping_power_openmp.cpp  trial_003_stopping_power_serial.cpp
(+132 files in other folders)
